# lerobot-robot-xarm

./: README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
lerobot_robot_xarm/: __init__.py  config_xarm.py  xarm.py
lerobot_xarm/: __init__.py  config.py  config_xarm.py  xarm.py
